# cursework-4

./: .gitignore  main.py  pyproject.toml
src/: api.py  funcs.py  saver.py  vacancy.py
