[tool.poetry]
name = "cursework-4"
version = "0.1.0"
description = ""
authors = ["Futeki <Povizun@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
setuptools = "^69.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
